# uwb-bootup

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml  grader.yml  install_dependencies.sh  memcheck.sh  success.sh  validate_coverage.py
01_use_compiler/: hello_world.cpp  readme.md
02_use_makefile/: cat.cpp  cat.h  main.cpp  makefile  readme.md
03_use_cmake/: CMakeLists.txt  cat.h  main.cpp  pet.cpp  pet.h  readme.md
04_memory/: makefile  mem_leaker_1.cpp  mem_leaker_2.cpp
docs/: linux.md  macos_windowns.md
src/: CMakeLists.txt  main.cpp
src/ACT_1_cpp_basics/1.1_baby_steps/: 1.1.1_baby_steps.cpp  1.1.2_array_sum.cpp  1.1.3_even_number_picker.cpp  1.1.4_more_on_pointer_and_reference.cpp  1.1.5_buggy_max.h
src/ACT_1_cpp_basics/1.2_fibonacci_sequence/: fib.h  fib_O_of_1_space.cpp  fib_O_of_n_space.cpp  fib_recursion.cpp
src/ACT_1_cpp_basics/1.3_binary_search/: binary_search.cpp  binary_search.h
src/ACT_1_cpp_basics/1.4_bubble_sort/: bubble_sort.cpp  bubble_sort.h
src/ACT_1_cpp_basics/1.5_business_card/: business_card.cpp
src/ACT_1_cpp_basics/1.6_power_of_2/: is_power_of_2.cpp  list_power_of_2_and_not.cpp  power_of_2.h
src/ACT_2_manage_memory/2.1_return_your_loan/: classroom.cpp  classroom.h  laptop.h
src/ACT_2_manage_memory/2.2_stack_heap_memory/: stack_vs_heap_memory.cpp  stack_vs_heap_memory.h
src/ACT_2_manage_memory/2.3_delete_a_binary_tree/: TreeNode.h  delete_tree.cpp
src/ACT_2_manage_memory/2.3_delete_a_single_linked_list/: ListNode.h  delete_single_linked_list.cpp
src/ACT_2_manage_memory/2.4_delete_a_binary_tree/: TreeNode.h  delete_tree.cpp
src/ACT_3_object_oriented_programming/3.1_business_card_again/: business_card.cpp
src/ACT_3_object_oriented_programming/3.2_rubber_duck/: rubber_duck.cpp  rubber_duck.h
src/ACT_3_object_oriented_programming/3.3_animal/: animal.cpp  animal.h  cat.h  dog.cpp  dog.h
src/ACT_3_object_oriented_programming/3.3_color/: color.cpp  color.h
src/ACT_3_object_oriented_programming/3.4_base_and_derived/: base_class.cpp  base_class.h  derived_class.cpp  derived_class.h  util.h
src/cpp_basics/: baby_step.cpp  baby_step.h  baby_steps.cpp  baby_steps.h
src/manage_your_own_memory/: memory_management.cpp  memory_management.h
src/object_oriented_programming/: oop.cpp  oop.h
test/: CMakeLists.txt  main.cpp  util.cpp  util.h
test/cpp_basics/: playground_power_of_2.cpp  unit_test_baby_steps.cpp  unit_test_binary_search.cpp  unit_test_bubble_sort.cpp  unit_test_danger_of_reference.cpp  unit_test_fib.cpp  unit_test_find_max.cpp  unit_test_pointer.cpp  unit_test_power_of_2.cpp
test/manage_memory/: unit_test_return_loan.cpp  unit_test_stack_vs_heap.cpp
test/manage_your_own_memory/: unit_test_manage_your_own_memory.cpp
test/object_oriented_programming/: playground_animal.cpp  playground_base_derived.cpp  unit_test_animal.cpp  unit_test_color.cpp  unit_test_object_oriented_programming.cpp  unit_test_rubber_duck.cpp
